Fixed Sidebar Spacing
Spaced out chevrons

--- a/css/oappMain.css
+++ b/css/oappMain.css
@@ -114,16 +114,14 @@ body {
  */
 #accordion {
     list-style: none;
-    margin-right: 60px; /* 20px padding + 1px border */
 	margin-bottom: 20px;
 	margin-left: -20px;
 	padding-left: 20px;
-	
 }
 
 #accordion ul {
     list-style: none;
-	margin-left: 0px;
+	
 }
 #accordion ul{
     display: none;
@@ -147,10 +145,9 @@ body {
 	border-color: #E8E8E9;
 	border-style: inset; */
 }
-/*#accordion span{
-	border:0 #E8E8E9 solid;
+#accordion span{
+	margin-right: 20px;
+	/*border:0 #E8E8E9 solid;
     border-bottom-width:1px;
-*/	
-#category{
-margin-right: 80px;
+	*/
 }
